Replace Jetty with custom scheme handler